jlamontSC-test/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Category_Michael_Brune__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospects</fullName>
                </value>
                <value>
                    <fullName>Big League Institutions</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Major Donors</fullName>
                </value>
                <value>
                    <fullName>Board Members</fullName>
                </value>
                <value>
                    <fullName>Corporate Donor</fullName>
                </value>
                <value>
                    <fullName>Corporate Prospect</fullName>
                </value>
                <value>
                    <fullName>Sierra Club Board Member</fullName>
                </value>
                <value>
                    <fullName>Sierra Club Foundation Board Member</fullName>
                </value>
                <value>
                    <fullName>Top 50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>If( isblank(rC_Bios__External_ID__c )=true, Auto_Account_Number__c , rC_Bios__External_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>Needed for Snapshot Capture</description>
        <formula>RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sort_Name__c</fullName>
        <description>The preferred Contacts LN + FN + Account Name for sorting</description>
        <formula>rC_Bios__Preferred_Contact__r.LastName +  rC_Bios__Preferred_Contact__r.FirstName +  Name</formula>
        <inlineHelpText>A sorting value for Accounts, based upon Preferred Contact Name and Account Name</inlineHelpText>
        <label>Account Sort Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Strategy__c</fullName>
        <description>The most recently updated active Account Strategy</description>
        <label>Account Strategy</label>
        <length>522</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AddUp_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AddUp Household</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Account_Number__c</fullName>
        <description>Automatically generated Account Number for newly created Account records.</description>
        <displayFormat>A-{0000000}</displayFormat>
        <inlineHelpText>Automatically generated Account Number for newly created Account records.</inlineHelpText>
        <label>Auto Account #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Batch_Upload_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for matching rules. Always leave unchecked.</description>
        <label>Batch Upload Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Upload_Flow_Name__c</fullName>
        <formula>&quot;Account Name: &quot; &amp; &quot; &quot; &amp;  Name 
&amp; BR() &amp;
&quot;Account Type: &quot; &amp; &quot; &quot; &amp;  RecordType.Name 
&amp; BR() &amp;
&quot;Preferred Contact: &quot; &amp; &quot; &quot; &amp;   rC_Bios__Preferred_Contact__r.kw__Full_Name__c 
&amp; BR() &amp;  
IF(NOT(ISBLANK(BillingAddress)),BillingStreet
&amp; BR() &amp; 
BillingCity &amp; &quot;, &quot; &amp; BillingState &amp; &quot; &quot; &amp; BillingPostalCode &amp; BR(),null)
&amp; IF(NOT(ISBLANK(Email__c)), HYPERLINK(&quot;mailto:&quot;+Email__c,Email__c) &amp; BR(),null)
&amp; HYPERLINK(&quot;/&quot; &amp; Id, &quot;View record in new window&quot;, &quot;_blank&quot;)</formula>
        <label>Batch Upload Flow Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingAddress18__c</fullName>
        <description>The</description>
        <formula>CASESAFEID(rC_Bios__Preferred_Billing_Address__r.Id)</formula>
        <label>BillingAddress18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C3_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C3 Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C4_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>C4 Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Safe_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Account Case Safe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CastIron_Integration_Status__c</fullName>
        <defaultValue>&quot;In Transit&quot;</defaultValue>
        <label>CastIron Integration Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CastIron_Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CastIron Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chapter Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter__c</fullName>
        <description>The geographic Chapter of the constituent which is based on their address. This field may differ from the Chapter record on their membership record which is contained in the field &quot;Membership Chapter&quot;.</description>
        <inlineHelpText>The geographic Chapter of the constituent which is based on their address. This field may differ from the Chapter record on their membership record which is contained in the field &quot;Membership Chapter&quot;.</inlineHelpText>
        <label>Chapter</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_System_Salutation__c</fullName>
        <label>Club System Salutation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_System_Search_Key__c</fullName>
        <label>Club System Search Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CongDist__c</fullName>
        <label>Congressional</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address_Check_KW__c</fullName>
        <description>This is a field that will be used to mark the Accounts of Contacts that need to Account Addresses updated to match by ZDM.  It is a temporary field.  It should not be included on any page layouts.</description>
        <label>Contact Address Check KW</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistrictChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DistrictChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Donation_Change_2012_13__c</fullName>
        <formula>Total_Donations_2013__c - Total_Donations_2012__c</formula>
        <label>Donation Change 2012-13</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Change_2013_14__c</fullName>
        <formula>Total_Donations_2014__c - Total_Donations_2013__c</formula>
        <label>Donation Change 2013-14</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Donation_Count__c</fullName>
        <label>Donation Count</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Donation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Emails_Match__c</fullName>
        <description>Compares the Email__c with the rC Preferred Contact&apos;s Email</description>
        <formula>Email__c =  rC_Bios__Preferred_Contact_Email__c</formula>
        <label>Emails Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An account which has given a donation after the donor&apos;s death. (Market Class E).</description>
        <inlineHelpText>An account which has given a donation after the donor&apos;s death. (Market Class E).</inlineHelpText>
        <label>Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity_Code__c</fullName>
        <description>Temporary field for uploading ethnicity data.</description>
        <label>Ethnicity Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>Native American</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID_Length__c</fullName>
        <description>Temporary, to check data. TL</description>
        <formula>LEN( External_ID__c )</formula>
        <label>External ID Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Donation_Date__c</fullName>
        <label>First Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geographic_Chapter__c</fullName>
        <label>Geographic Chapter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Chapters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic_Group__c</fullName>
        <label>Geographic Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Groups</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grasstop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grasstop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>The geographic Group of the constituent which is based on their address. This field may differ from the Group record on their membership record which is contained in the field &quot;Membership Group&quot;.</description>
        <inlineHelpText>The geographic Group of the constituent which is based on their address. This field may differ from the Group record on their membership record which is contained in the field &quot;Membership Group&quot;.</inlineHelpText>
        <label>Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasValidMembership__c</fullName>
        <formula>Membership__r.Member_Account__c = Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HasValidMembership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JL_Temp__c</fullName>
        <label>JL Temp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JMS14_load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test field for loading JMS 14 preferences.</description>
        <label>JMS14_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>John_Muir_Society__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An account donating $1,000-$9,999 in a single year (not including membership or chapter donations).</description>
        <inlineHelpText>An account donating $1,000-$9,999 in a single year (not including membership or chapter donations).</inlineHelpText>
        <label>John Muir Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LH_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field for data loading, to be used by Lisa Hewitt.</description>
        <label>LH_Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Largest_Donation_Amount__c</fullName>
        <label>Largest Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Largest_Donation_Date__c</fullName>
        <description>Date of Largest Donation</description>
        <label>Largest Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Largest_Membership_Amount__c</fullName>
        <label>Largest Membership Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Amount__c</fullName>
        <formula>Last_Donation__r.rC_Giving__Closed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Donation Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Date__c</fullName>
        <formula>Last_Donation__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Fund_Type__c</fullName>
        <formula>TEXT(Last_Donation__r.FundType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Donation Fund Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Donation_GAU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Donation GAU</label>
        <referenceTo>rC_Giving__GAU__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountsLastDonationGAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Giving_Type__c</fullName>
        <formula>TEXT(Last_Donation__r.GivingType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Donation Giving Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Primary_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Donation Primary Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts (Last Donation Primary Campaign Source)</relationshipLabel>
        <relationshipName>AccountsLastDonationPrimaryCampaignSourc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Recipient__c</fullName>
        <formula>TEXT(Last_Donation__r.Recipient__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Donation Recipient</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Donation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Donation</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Accounts Last Donation</relationshipLabel>
        <relationshipName>Last_Donation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Membership_Amount__c</fullName>
        <label>Last Membership Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Timestamp__c</fullName>
        <description>For reportability of Last Modified Date &amp; Time.</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LegState__c</fullName>
        <label>Legislative State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifetime_Max__c</fullName>
        <label>Lifetime Max</label>
        <summarizedField>Opportunity.rC_Giving__Giving_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Donation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lifetime_Min__c</fullName>
        <label>Lifetime Min</label>
        <summarizedField>Opportunity.rC_Giving__Giving_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Donation</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LowHouse__c</fullName>
        <label>State Lower</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Donor_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An account which potentially could give 5 figures or more per year (not including membership).  The account is specially cultivated/stewarded by a Major Gift Officer.</description>
        <inlineHelpText>An account which potentially could give 5 figures or more per year (not including membership).  The account is specially cultivated/stewarded by a Major Gift Officer.</inlineHelpText>
        <label>Major Donor Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Major_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An account giving a donation of 5 figures or more in a single year (not including membership, sometimes chapter donations). The account is specially cultivated/stewarded by a Major Gift Officer. (Market Class M)</description>
        <inlineHelpText>An account giving a donation of 5 figures or more in a single year (not including membership, sometimes chapter donations). The account is specially cultivated/stewarded by a Major Gift Officer. (Market Class M)</inlineHelpText>
        <label>Major Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Active_NonForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Membership Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Active__c</fullName>
        <formula>Membership__r.Membership_Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Cancel_Date__c</fullName>
        <formula>Membership__r.Cancel_Date__c</formula>
        <label>Membership Cancel Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Cancel_Reason__c</fullName>
        <formula>TEXT(Membership__r.Cancel_Reason__c)</formula>
        <label>Membership Cancel Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Chapter_NonForm__c</fullName>
        <label>Membership Chapter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Chapters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Chapter__c</fullName>
        <description>The Chapter of the constituent as recorded on their membership record. This may differ from the &quot;Chapter&quot; field which is purely geographic.</description>
        <formula>Membership__r.Chapter__c</formula>
        <inlineHelpText>The Chapter of the constituent as recorded on their membership record. This may differ from the &quot;Chapter&quot; field which is purely geographic.</inlineHelpText>
        <label>Membership Chapter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Current_Promotion__c</fullName>
        <formula>Membership__r.Current_Promotion__r.Name</formula>
        <label>Membership Current Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Expiration_Date__c</fullName>
        <formula>Membership__r.Expiration_Date__c</formula>
        <label>Membership Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Group_NonForm__c</fullName>
        <label>Membership Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Groups</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Membership_Group__c</fullName>
        <description>The Group of the constituent as recorded on their membership record. This may differ from the &quot;Group&quot; field which is purely geographic.</description>
        <formula>Membership__r.Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Level__c</fullName>
        <formula>TEXT(Membership__r.Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Original_Promotion_Program__c</fullName>
        <formula>Membership__r.Original_Promotion__r.Program__r.Name</formula>
        <label>Membership Original Promotion Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Original_Promotion__c</fullName>
        <formula>Membership__r.Original_Promotion__r.Name</formula>
        <label>Membership Original Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Original_Start_Date__c</fullName>
        <formula>Membership__r.Original_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Original Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Reinstate_Date__c</fullName>
        <formula>Membership__r.Reinstate_Date__c</formula>
        <label>Membership Reinstate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Reinstate_Promotion__c</fullName>
        <formula>Membership__r.Reinstate_Promotion__r.Name</formula>
        <label>Membership Reinstate Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <formula>Membership__r.Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <formula>TEXT(Membership__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Membership Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Membership</label>
        <referenceTo>Membership__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>AccountsMembership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merge_Survivor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merge Survivor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts To Be Merged</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Donation_Date__c</fullName>
        <label>Most Recent Donation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>National_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Chapter_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Chapter Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Local_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account field maintained by the preference, values here are mirrored to the Account&apos;s Contacts via Trigger and workflows.</description>
        <label>No Local Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Local_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account field maintained by the preference, values here are mirrored to the Account&apos;s Contacts via Trigger and workflows.</description>
        <label>No Local Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_SierraRise_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when a non-SierraRise Donation has been recorded against this Account.</description>
        <inlineHelpText>Does this Account have a non-SierraRise donation?</inlineHelpText>
        <label>Non-SierraRise Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Accounts__c</fullName>
        <description>Use &quot;Power of One&quot; trick to get distinct count of accounts</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <description>Since the Account might have no membership, it&apos;s not possible to guess the correct value, so when the Membership type is null/blank then returning a count of zero.</description>
        <formula>IF(ISBLANK(Membership_Type__c),0,
IF(Membership_Type__c=&quot;Single&quot;,1,2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Memberships__c</fullName>
        <description>Counts regardless of Active membership to aid in counting of inactive memberships. Report filter can be used to accurately get correct count.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizational_Focus__c</fullName>
        <label>Organizational Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Building/Construction</fullName>
                </value>
                <value>
                    <fullName>Clean Tech Business</fullName>
                </value>
                <value>
                    <fullName>Democracy</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Economic Justice</fullName>
                </value>
                <value>
                    <fullName>Environmental Group</fullName>
                </value>
                <value>
                    <fullName>Faith</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Immigrant Rights</fullName>
                </value>
                <value>
                    <fullName>Indigenous</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>LGBTQ</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Retail/Consumer Business</fullName>
                </value>
                <value>
                    <fullName>Social Justice</fullName>
                </value>
                <value>
                    <fullName>Youth/Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Campaign_Description__c</fullName>
        <formula>Original_Campaign__r.Promo_Description__c</formula>
        <label>Original Campaign Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Form_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Form Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts (Original Form Campaign)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Peer_to_Peer_Fundraiser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Peer-to-Peer Fundraiser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Giving_Prospect__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account that put Sierra Club in their will and or has completed a Life Income Trust.</description>
        <inlineHelpText>Account that put Sierra Club in their will and or has completed a Life Income Trust.</inlineHelpText>
        <label>Rachel Carson Society</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Giving__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All PG professionals/lawyers and any account that does not want MDM correspondence. (Market Class P)</description>
        <inlineHelpText>All PG professionals/lawyers and any account that does not want MDM correspondence. (Market Class P)</inlineHelpText>
        <label>Planned Giving</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreferredAddress18__c</fullName>
        <description>The 18-digit SFDC ID of the Preferred Billing Address of this Account.</description>
        <inlineHelpText>The 18-digit SFDC ID of the Preferred Billing Address of this Account.</inlineHelpText>
        <label>PreferredAddress18</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>